--- a/_includes/google_auth.html
+++ b/_includes/google_auth.html
@@ -56,14 +56,13 @@ transition: 0.5s;
   </div></div></div>
   <script type="module">
     const firebaseConfig = {
-    apiKey: "{{ site.env.API_KEY }}",
-    authDomain: "{{ site.env.AUTH_DOMAIN }}",
-    databaseURL: "{{ site.env.DATABASE_URL }}",
-    projectId: "{{ site.env.PROJECT_ID }}",
-    storageBucket: "{{ site.env.STORAGE_BUCKET }}",
-    messagingSenderId: "{{ site.env.SENDER_ID }}",
+    apiKey: "{{ site.API_KEY }}",
+    authDomain: "{{ site.AUTH_DOMAIN }}",
+    databaseURL: "{{ site.DATABASE_URL }}",
+    projectId: "{{ site.PROJECT_ID }}",
+    storageBucket: "{{ site.STORAGE_BUCKET }}",
+    messagingSenderId: "{{ site.SENDER_ID }}",
     appId: "{{ site.env.APP_ID }}",
-    measurementId: "{{ site.env.MEASUREMENT_ID }}"
     };firebase.initializeApp(firebaseConfig);const auth=firebase.auth();const userSignedInDiv=document.getElementById('user-signed-in');const signInButton=document.getElementById('sign-in-button');function toggleUI(){if(auth.currentUser){location.href="{{site.baseurl}}/checkout"}else{}}
 signInButton.addEventListener('click',()=>{const provider=new firebase.auth.GoogleAuthProvider();auth.signInWithPopup(provider)});auth.onAuthStateChanged(user=>{toggleUI()})
   </script>
